# marketing-mix-model

./: .gitignore  CONFIG_TUNING_GUIDE.md  CONFIG_VALIDATION_GUIDE.md  PIPELINE_GUIDE.md  PIPELINE_USAGE_GUIDE.md  README.md  pyproject.toml  pytest.ini  run_tests.py
config/: main.yaml  schema.json
config/profiles/: docker.yaml  local.yaml
src/mmm/: __init__.py  cli.py  config.py
src/mmm/data/: __init__.py  ingest.py  transform.py  validate.py
src/mmm/evaluation/: __init__.py  validator.py
src/mmm/features/: __init__.py  adstock.py  attribution.py  baseline.py  competitors.py  creative_fatigue.py  custom_terms.py  engineer.py  saturation.py  seasonality.py
src/mmm/models/: __init__.py  base.py  meridian.py  metadata.py  pymc.py
src/mmm/optimization/: __init__.py  allocator.py
src/mmm/reporting/: __init__.py  dashboard.py
src/mmm/utils/: __init__.py  logging.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: test_config_specific_validation.py  test_config_usage_validation.py
tests/validation/: __init__.py  analyze_config_validation.py  validate_config_usage.py
