[project]
name = "mmm"
version = "0.1.0"
description = "Hierarchical Bayesian Marketing Mix Modeling with Meridian and PyMC"
readme = "README.md"
authors = [
    { name = "devcharlie", email = "devcharlie2698619@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
    "scikit-learn>=1.3.0",
    "pytest>=7.4.0",
    "jupyter>=1.0.0",
    "seaborn>=0.12.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "psutil>=5.9.0",
    "pyarrow>=21.0.0",
    "google-meridian>=1.1.6",
    "pymc>=5.25.1",
    "pytensor>=2.31.7",
]

[project.scripts]
mmm = "mmm.cli:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
